<resources>
    <string name="app_name">SERC Energy Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="action_graph_settings">Graph Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="action_reset_zoom">Reset Zoom</string>
    <string name="pref_header_general">General</string>
    <string name="pref_multi_list_summary">Select the locations to be displayed in the main screen</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_interval">Fetch Interval</string>
    <string name="pref_title_check_change_in_data">Update frequency for Live Power Readings</string>
    <string name="pref_general_switch_name_tag_title">Switch Name and Tag</string>
    <string name="pref_general_switch_name_tag_summary">If turned on, the Location name and tag will switch position on the main screen</string>
    <string-array name="pref_example_list_titles">
        <item>Every second</item>
        <item>Every 2 seconds</item>
        <item>Every 5 seconds</item>
        <item>Every 10 seconds</item>
        <item>Every 20 seconds</item>
        <item>Every 30 seconds</item>
        <item>Every minute</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_interval_entries">
        <item>10 ms</item>
        <item>100 ms</item>
        <item>500 ms</item>
        <item>900 ms</item>
        <item>1 second</item>
        <item>2 seconds</item>
        <item>5 seconds</item>
    </string-array>
    <string-array name="pref_interval_values">
        <item>10</item>
        <item>100</item>
        <item>500</item>
        <item>900</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <string name="pref_header_graph">Graph</string>
    <string name="pref_graph_zeroing">Graph Zeroing</string>
    <string name="pref_graph_zeroing_summary">Choose the amount of time that can pass
        without data being received before the graph is taken to zero</string>
    <string name="pref_graph_line_color_title">Line Color</string>
    <string name="pref_graph_line_color_summary">Changes the color of the line for the graph</string>
    <string name="pref_graph_fill_color_title">Fill Color for Historical Graph</string>
    <string name="pref_graph_fill_color_summary">Changes the color of the fill underneath the graph</string>
    <string name="pref_graph_line_style_title">Line style for Historical Graph</string>
    <string name="pref_graph_default_duration_title">Default Duration on \'Draw Graph\' click</string>
    <string name="pref_graph_y_axis_label_title">Show Y-Axis Labels on both sides</string>
    <string name="pref_graph_y_axis_label_summary">If turned off, the Y-Axis label will only be
        shown on the left side of the graph</string>
    <string name="pref_graph_x_axis_position_title">X-Axis Label Position</string>
    <string name="pref_graph_x_axis_angle_title">Angle the X-Axis label makes with X-Axis</string>
    <string name="pref_graph_smoothen_line_title">Smoother line</string>
    <string name="pref_graph_smoothen_line_summary">Shows smoother line between data points</string>
    <string name="pref_general_disable_animations_title">Disable animations</string>
    <string-array name="pref_graph_zero_titles">
        <item>None</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="pref_graph_zero_values">
        <item>-1</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>240</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>

    </string-array>
    <string-array name="graph_default_duration_entries">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>6 months</item>


    </string-array>
    <string-array name="graph_default_duration_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>180</item>


    </string-array>
    <string-array name="pref_graph_line_color_entries">
        <item>Red</item>
        <item>Cyan</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Yellow</item>

    </string-array>
    <string-array name="pref_graph_line_color_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>

    </string-array>
    <string-array name="pref_graph_fill_color_entries">
        <item>None</item>
        <item>Orange</item>
        <item>Cyan</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Yellow</item>

    </string-array>
    <string-array name="pref_graph_fill_color_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>

    </string-array>
    <string-array name="pref_graph_line_style_entries">
        <item>Show none</item>
        <item>Show values only</item>
        <item>Show circles only</item>
        <item>Show circles and values</item>

    </string-array>
    <string-array name="pref_graph_line_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>


    </string-array>
    <string-array name="pref_graph_x_axis_time_date_entries">
        <item>Date only</item>
        <item>Time only</item>
        <item>Both Date and Time</item>

    </string-array>
    <string-array name="pref_graph_x_axis_time_date_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>
    <string-array name="pref_graph_x_axis_angle_entries">
        <item>0\u00B0</item>
        <item>10\u00B0</item>
        <item>30\u00B0</item>
        <item>45\u00B0</item>
        <item>60\u00B0</item>
        <item>90\u00B0</item>

    </string-array>
    <string-array name="pref_graph_x_axis_angle_values">
        <item>0</item>
        <item>10</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>


    </string-array>
    <string-array name="pref_graph_x_axis_position_entries">
        <item>Bottom</item>
        <item>Top</item>
        <item>Both Sides</item>

    </string-array>
    <string-array name="pref_graph_x_axis_position_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>

    </string-array>
    <string name="pref_header_account">Account</string>
    <string name="default_serc_root_link">https://serc.strathmore.edu</string>
    <string name="pref_edit_api_key">Edit API Key</string>
    <string name="pref_edit_api_summary">Contains the API Key for the users account that is used to fetch data</string>
    <string name="pref_edit_root_link_title">Edit Root Link</string>
    <string name="pref_edit_root_link_summary">The URL of where the EMONCms platform is hosted</string>
    <string-array name="pref_selected_accounts_values">

    </string-array>
    <string-array name="pref_selected_accounts_entries">

    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="about_content">
        This app was developed by Strathmore Energy Research Center (SERC) for the purposes of remote energy monitoring.
        \n
        \n

        It is based on the open-source system developed by <a href="https://openenergymonitor.org//">Open Energy Monitering</a>
        called the <a href="https://emoncms.org/">EmonCMS platform</a>. It is partly based on
        <a href="https://learn.openenergymonitor.org/electricity-monitoring/other-software/AndroidAppPart1">this example app</a>
        on the Open Energy Monitor website.
        \n
        \n

        The graph is drawn using <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>
        \n
        \n

    </string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="pref_list_of_stations">Locations to Display</string>
    <string name="graph_title">Graph</string>
    <string name="draw_graph">Draw Graph</string>
    <string name="api_key_error_desc">The API key is needed in order to send and receive data from the EmonCMS platform.
        It can be found by loging into your EmonCMS dashboard and going to \'My Account\' in the setup tab.
    </string>
    <string name="api_key_dialog_title">Read API Key Not found</string>
    <string name="enter_read_api_key_prompt">Enter Read API Key</string>
    <string name="api_key_dialog_settings_reminder">API Key can also be added in settings later</string>
    <string name="root_link_error_desc">The Root Link is the URL of where the EMONCms platform is hosted.
        \nFor example, if your account is at https://www.emoncms.org/user/view, then the root link is \"https://www.emoncms.org\".
        If your account is at https://serc.strathmore.edu/emoncms/user/view, then the root link is \"https://serc.strathmore.edu/emoncms\".
    </string>
    <string name="root_link_dialog_title">Root Link Not found</string>
    <string name="pref_grid_draw_graph_title">Draw Grid</string>
    <string name="pref_grid_draw_graph_summary">If enabled, the background rectangle behind the chart drawing-area will be drawn.</string>
    <string name="pref_graph_x_axis_time_date_title">Date format on X Axis</string>
    <string name="pref_live_graph_smooth_line_summary">If turned on, the line that passes through
        all the data points will be smooth rather that a straight line cnnnecting each point</string>
</resources>