<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="General Graph Settings"
        android:key="pref_graph_general_category">

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_graph_zero_titles"
            android:entryValues="@array/pref_graph_zero_values"
            android:key="graph_zero_listpref"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="Apply"
            android:summary="@string/pref_graph_zeroing_summary"
            android:title="@string/pref_graph_zeroing"
            />

        <!--Another way to implement the graph zeroing where the user enters the
        figure in hours-->
        <!-- <EditTextPreference
         android:defaultValue="1"
         android:inputType="numberDecimal"
         android:key="graph_inactivity_zero"
         android:maxLines="1"
         android:singleLine="true"
         android:summary="@string/pref_graph_zeroing_summary"
         android:title="@string/pref_graph_zeroing"
         />-->


        <ListPreference
            android:defaultValue="7"
            android:entries="@array/graph_default_duration_entries"
            android:entryValues="@array/graph_default_duration_values"
            android:key="graph_default_duration_listpref"
            android:title="@string/pref_graph_default_duration_title"
            />


    </PreferenceCategory>







    <PreferenceCategory
        android:title="Graph Appearance"
        android:key="pref_graph_appearance_category">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_graph_line_color_entries"
            android:entryValues="@array/pref_graph_line_color_values"
            android:key="graph_line_color_listpref"
            android:title="@string/pref_graph_line_color_title"
            android:summary="@string/pref_graph_line_color_summary"
            />


        <ListPreference
            android:defaultValue="1"
            android:key="graph_fill_color_listpref"
            android:entries="@array/pref_graph_fill_color_entries"
            android:entryValues="@array/pref_graph_fill_color_values"
            android:title="@string/pref_graph_fill_color_title"
            android:summary="@string/pref_graph_fill_color_summary"
            />

        <ListPreference
            android:key="pref_graph_line_style"
            android:defaultValue="1"
            android:title="@string/pref_graph_line_style_title"
            android:entries="@array/pref_graph_line_style_entries"
            android:entryValues="@array/pref_graph_line_style_values"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/pref_grid_draw_graph_title"
            android:summary="@string/pref_grid_draw_graph_summary"
            android:key="graph_draw_grid_pref"
            />

        <SwitchPreference
            android:key="pref_graph_smoothen_line"
            android:defaultValue="false"
            android:title="@string/pref_graph_smoothen_line_title"
            android:summary="@string/pref_graph_smoothen_line_summary"
            />



    </PreferenceCategory>



    <PreferenceCategory
        android:title="Label Settings"
        android:key="pref_graph_label_category">

        <SwitchPreference
            android:key="graph_y_axis_both_sides"
            android:title="@string/pref_graph_y_axis_label_title"
            android:summary="@string/pref_graph_y_axis_label_summary"
            android:defaultValue="false"
            />

        <ListPreference
            android:defaultValue="3"
            android:key="graph_x_axis_time_date"
            android:title="@string/pref_graph_x_axis_time_date_title"
            android:entries="@array/pref_graph_x_axis_time_date_entries"
            android:entryValues="@array/pref_graph_x_axis_time_date_values"
            />

        <ListPreference
            android:defaultValue="45"
            android:key="graph_x_axis_angle_listpref"
            android:title="@string/pref_graph_x_axis_angle_title"
            android:entries="@array/pref_graph_x_axis_angle_entries"
            android:entryValues="@array/pref_graph_x_axis_angle_values"
            />

        <ListPreference
            android:defaultValue="1"
            android:key="graph_x_axis_position_listpref"
            android:title="@string/pref_graph_x_axis_position_title"
            android:entries="@array/pref_graph_x_axis_position_entries"
            android:entryValues="@array/pref_graph_x_axis_position_values"
            />


    </PreferenceCategory>

<PreferenceCategory
    android:title="Live Graph Only"
    android:key="pref_live_graph_category">

    <SwitchPreference
        android:key="pref_live_graph_show_circles"
        android:title="Show circles on data points"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:key="pref_live_graph_show_data_values"
        android:title="Show Data Point values on graph"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:key="pref_live_graph_smooth_line"
        android:title="Show smooth line"
        android:summary="@string/pref_live_graph_smooth_line_summary"
        android:defaultValue="false"
        />

    <SwitchPreference
        android:key="pref_live_graph_y_axis_start_from_zero"
        android:title="Always start Y axis from Zero"
        android:defaultValue="false"
        />

</PreferenceCategory>



</PreferenceScreen>
